# hots-draft

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  todo.md
assets/: index-B4FgzbAA.css  index-BBadIQUi.js  index-BX_24rjz.js  index-BYCi0J82.js  index-BgsyE-GB.css  index-C9jIVMou.css  index-CEr1rgu_.js  index-DnaROvtc.css  index-QqlrhIzM.css  index-TqZ0V4tG.js  index-ZY3E31O9.js
backend/: pyproject.toml
backend/app/: draft.py  main.py  models.py  scoring.py  validate_data.py
backend/app/detection/: __init__.py  base.py  manual.py  name_map.py  ocr.py  vision.py
backend/tests/: test_scoring.py
data/: heroes.json  overrides.json  win_rates.json
docs/: setup.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: copy-assets.js
frontend/src/: App.svelte  app.css
scraper/: build_db.py  download_portraits.py  fetch_icyveins.py  parse.py
scratch/: analyze_matching.py  benchmark_ocr.py  build_templates_from_draft.py  debug_vision.py  parse_win_rates.py  test_detection_on_screenshot.py  test_name_map.py  test_scales.py
