[project]
name = "hots-draft-backend"
version = "0.1.0"
description = "FastAPI backend for Heroes of the Storm draft helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "websockets>=11.0.3",
    "opencv-python>=4.7.0.72",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.24.0",
    "mss>=10.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pre-commit>=3.3.2",
    "ruff>=0.8.4",
]
